--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
  @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary{
+    @apply font-medium transition duration-200 px-8 py-3 bg-blue-400 hover:bg-blue-800 rounded-full text-white shadow-md text-lg border
+}
+.btn-outlined{
+    @apply font-medium transition duration-200 px-8 py-3 text-blue-600 shadow-md rounded-full bg-gray-100 hover:bg-gray-300 text-lg border
+}
+@layer utilities{
+    .title-text{
+        @apply bg-gradient-to-r from-blue-500 via-purple-500 to-blue-300 bg-clip-text text-transparent font-black text-5xl
+    }
+}
